--- a/css/common.css
+++ b/css/common.css
@@ -300,6 +300,20 @@ footer button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+
+  display: flex;
+  padding: 10px 45px 10px 46px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  letter-spacing: 0.06em;
+
+  border-radius: 4px;
+  border: none;
+  outline: none;
 }
 
 .copyright {
