правки в классах футера и хэдера

--- a/css/common.css
+++ b/css/common.css
@@ -235,7 +235,7 @@ h6 p {
   margin-right: 69px;
 }
 
-.footer-contacts > .logo {
+.footer-contacts__logo {
   display: block;
   margin-bottom: 10px;
 }
